@@ -18,6 +18,7 @@
 package org.apache.lucene.tests.codecs.asserting;
 
 import java.io.IOException;
+import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.lucene.codecs.KnnFieldVectorsWriter;
 import org.apache.lucene.codecs.KnnVectorsFormat;
 import org.apache.lucene.codecs.KnnVectorsReader;
@@ -105,11 +106,19 @@ public class AssertingKnnVectorsFormat extends KnnVectorsFormat {
   static class AssertingKnnVectorsReader extends KnnVectorsReader implements HnswGraphProvider {
     final KnnVectorsReader delegate;
     final FieldInfos fis;
+    final boolean mergeInstance;
+    AtomicInteger mergeInstanceCount = new AtomicInteger();
+    AtomicInteger finishMergeCount = new AtomicInteger();
 
     AssertingKnnVectorsReader(KnnVectorsReader delegate, FieldInfos fis) {
+      this(delegate, fis, false);
+    }
+
+    AssertingKnnVectorsReader(KnnVectorsReader delegate, FieldInfos fis, boolean mergeInstance) {
       assert delegate != null;
       this.delegate = delegate;
       this.fis = fis;
+      this.mergeInstance = mergeInstance;
     }
 
     @Override
@@ -148,6 +157,7 @@ public class AssertingKnnVectorsFormat extends KnnVectorsFormat {
     @Override
     public void search(String field, float[] target, KnnCollector knnCollector, Bits acceptDocs)
         throws IOException {
+      assert !mergeInstance;
       FieldInfo fi = fis.fieldInfo(field);
       assert fi != null
           && fi.getVectorDimension() > 0
@@ -158,6 +168,7 @@ public class AssertingKnnVectorsFormat extends KnnVectorsFormat {
     @Override
     public void search(String field, byte[] target, KnnCollector knnCollector, Bits acceptDocs)
         throws IOException {
+      assert !mergeInstance;
       FieldInfo fi = fis.fieldInfo(field);
       assert fi != null
           && fi.getVectorDimension() > 0
@@ -166,9 +177,48 @@ public class AssertingKnnVectorsFormat extends KnnVectorsFormat {
     }
 
     @Override
+    public KnnVectorsReader getMergeInstance() {
+      assert !mergeInstance;
+      var mergeVectorsReader = delegate.getMergeInstance();
+      assert mergeVectorsReader != null;
+      mergeInstanceCount.incrementAndGet();
+
+      final var parent = this;
+      return new AssertingKnnVectorsReader(
+          mergeVectorsReader, AssertingKnnVectorsReader.this.fis, true) {
+        @Override
+        public KnnVectorsReader getMergeInstance() {
+          assert false; // merging from a merge instance it not allowed
+          return null;
+        }
+
+        @Override
+        public void finishMerge() throws IOException {
+          assert mergeInstance;
+          delegate.finishMerge();
+          parent.finishMergeCount.incrementAndGet();
+        }
+
+        @Override
+        public void close() {
+          assert false; // closing the merge instance it not allowed
+        }
+      };
+    }
+
+    @Override
+    public void finishMerge() throws IOException {
+      assert mergeInstance;
+      delegate.finishMerge();
+      finishMergeCount.incrementAndGet();
+    }
+
+    @Override
     public void close() throws IOException {
+      assert !mergeInstance;
       delegate.close();
       delegate.close();
+      assert finishMergeCount.get() <= 0 || mergeInstanceCount.get() == finishMergeCount.get();
     }
 
     @Override
