@@ -40,9 +40,9 @@ public class MockIndexInputWrapper extends FilterIndexInput {
 
   // Which MockIndexInputWrapper we were cloned from, or null if we are not a clone:
   private final MockIndexInputWrapper parent;
-  private final ReadAdvice readAdvice;
   private final boolean confined;
   private final Thread thread;
+  private ReadAdvice readAdvice;
 
   /** Sole constructor */
   public MockIndexInputWrapper(
@@ -182,6 +182,14 @@ public class MockIndexInputWrapper extends FilterIndexInput {
     ensureOpen();
     ensureAccessible();
     in.prefetch(offset, length);
+  }
+
+  @Override
+  public void updateReadAdvice(ReadAdvice readAdvice) throws IOException {
+    ensureOpen();
+    ensureAccessible();
+    this.readAdvice = readAdvice;
+    in.updateReadAdvice(readAdvice);
   }
 
   @Override
